--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                       <li class="nav-item">
                           <a class="nav-link js-scroll-trigger" href="#research">Research</a>
                       </li>
-                      <li class="nav-item">
+                      <!-- <li class="nav-item">
                           <a class="nav-link js-scroll-trigger" href="team.html">Our team</a>
-                      </li>
+                      </li> -->
                       <li class="nav-item">
                           <a class="nav-link js-scroll-trigger" href="#dev">Tools</a>
                       </li>
